service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodejs-sample-service
spec:
  selector:
    app: web-nodejs-sample  
  ports:
    - protocol: TCP
      port: 8080   
      targetPort: 8080
