route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-nodejs-sample-route
spec:
  to:
    kind: Service
    name: web-nodejs-sample-service 
  port:
    targetPort: 8080  
  tls:
    termination: edge  
    insecureEdgeTerminationPolicy: Redirect
